--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 .env
+
+# Database
 db.sqlite3
+*.db
+
+# pycache folders and files
+learning_logs/__pycache__/
+*.pyc
+PCC_Django_App_Project/__pycache__/
+*.pyc
+
+# temp files
+*.tmp
+*.cache/
 
