--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,10 @@ db.sqlite3
 *.db
 
 # pycache folders and files
-learning_logs/__pycache__/
-PCC_Django_App_Project/__pycache__/
+learning_logs\__pycache__\
+PCC_Django_App_Project\__pycache__\
 
 # temp files
 *.tmp
 cache/
 
-"learning_logs/__pycache__/" 
